Add cpu failure and update proto for grpc
